@@ -1,6 +1,5 @@
 import com.android.SdkConstants
 import com.codingfeline.buildkonfig.compiler.FieldSpec.Type
-import org.jetbrains.compose.desktop.application.dsl.TargetFormat
 import org.jetbrains.kotlin.gradle.ExperimentalWasmDsl
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import java.util.Properties
@@ -13,6 +12,7 @@ plugins {
     alias(libs.plugins.kotlinSerialization)
     alias(libs.plugins.ksp)
     alias(libs.plugins.buildkonfig)
+    alias(libs.plugins.koinCompiler)
 }
 
 kotlin {
@@ -20,7 +20,7 @@ kotlin {
 
     android {
         namespace = "world.hachimi.app.shared"
-        compileSdk = 36
+        compileSdk = 37
 
         minSdk = libs.versions.android.minSdk.get().toInt()
         compilerOptions {
@@ -30,7 +30,6 @@ kotlin {
     }
 
     listOf(
-        iosX64(),
         iosArm64(),
         iosSimulatorArm64()
     ).forEach { iosTarget ->
@@ -47,6 +46,7 @@ kotlin {
     }
 
     jvm()
+
     js {
         browser()
         binaries.executable()
@@ -85,6 +85,7 @@ kotlin {
             implementation(project.dependencies.platform(libs.koin.bom))
             implementation(libs.koin.core)
             implementation(libs.koin.compose)
+            implementation(libs.koin.annotations)
             implementation(libs.koin.compose.viewmodel)
             implementation(libs.koin.compose.viewmodelNavigation)
 
@@ -137,7 +138,7 @@ kotlin {
                 implementation(compose.desktop.currentOs) {
                     exclude("org.jetbrains.compose.material")
                 }
-                implementation(libs.kotlinx.coroutinesSwing)
+                implementation(libs.kotlinx.coroutines.swing)
 
                 implementation(libs.ktor.client.cio)
                 implementation(libs.logback)
@@ -157,12 +158,13 @@ kotlin {
             dependencies {
                 implementation(libs.ktor.client.cio)
                 implementation(libs.kotlinx.browser)
+                implementation(libs.navigation3.browser)
                 implementation(npm("howler", "2.2.4"))
             }
         }
         jsMain { }
         wasmJsMain { }
-        listOf(iosX64Main, iosArm64Main, iosSimulatorArm64Main).forEach { iosTarget->
+        listOf(iosArm64Main, iosSimulatorArm64Main).forEach { iosTarget->
             iosTarget {
                 dependsOn(nonAndroidMain)
                 dependencies {
@@ -190,6 +192,7 @@ dependencies {
 //    add("kspIosArm64", libs.room.compiler)
 }
 
+// Android-based preview support
 dependencies {
     androidRuntimeClasspath(libs.compose.ui.tooling)
 }
@@ -208,74 +211,10 @@ val gitVersionName = providers.exec {
 
 val gitVersionNameShort = gitVersionName.map { it.substringBefore("-") }
 
-compose.desktop {
-    application {
-        mainClass = "world.hachimi.app.MainKt"
-        jvmArgs += listOf("-XX:+UseZGC", "-XX:+ZGenerational", "-Xms128M", "-Xmx512M")
-        val flavor = project.findProperty("buildkonfig.flavor")
-        when (flavor) {
-            "release" -> nativeDistributions {
-                targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
-                packageName = "Hachimi World"
-                vendor = "Hachimi World, NPO"
-                copyright = "© 2025 Hachimi World Open Source Project"
-                packageVersion = gitVersionNameShort.get()
-                licenseFile = rootProject.file("LICENSE")
-
-                modules("jdk.unsupported", "java.naming")
-
-                windows {
-                    upgradeUuid = "1544B476-25C9-4A01-705E-B374B14B2F1B"
-                    perUserInstall = true
-                    dirChooser = false
-                    shortcut = true
-                    menu = true
-                    iconFile.set(rootProject.file("icons/icon.ico"))
-                }
-                macOS {
-                    appCategory = "public.app-category.entertainment"
-                    packageName = "基米天堂"
-                    dockName = "基米天堂"
-                    bundleID = "world.hachimi.app"
-                    iconFile.set(rootProject.file("icons/icon.icns"))
-                }
-                linux {
-                    packageName = "hachimi-world" // Linux does not support Chinese characters
-                    iconFile.set(rootProject.file("icons/icon.png"))
-                }
-            }
-            else -> nativeDistributions {
-                targetFormats(TargetFormat.Dmg, TargetFormat.Exe, TargetFormat.Deb)
-                packageName = "Hachimi World Dev"
-                packageVersion = gitVersionNameShort.get()
-                modules("jdk.unsupported", "java.naming")
-
-                windows {
-                    upgradeUuid = "8AD88FC9-A6A2-478D-9E80-FF735EE15785"
-                    perUserInstall = true
-                    dirChooser = false
-                    shortcut = true
-                    menu = true
-                    iconFile.set(rootProject.file("icons/icon.ico"))
-                }
-                macOS {
-                    packageName = "基米天堂 Dev"
-                    bundleID = "world.hachimi.app.dev"
-                    appCategory = "public.app-category.entertainment"
-                    iconFile.set(rootProject.file("icons/icon.icns"))
-                }
-                linux {
-                    packageName = "hachimi-world-dev" // Linux does not support Chinese characters
-                    iconFile.set(rootProject.file("icons/icon.png"))
-                }
-            }
-        }
-    }
-}
 
 buildkonfig {
     packageName = "world.hachimi.app"
-//    exposeObjectWithName = "BuildKonfig"
+    exposeObjectWithName = "BuildKonfig"
 
     val props = Properties().apply { load(rootProject.file(SdkConstants.FN_LOCAL_PROPERTIES).reader()) }
 
